<?xml version="1.0"?>
<package format="2">
    <name>gnss</name>
    <version>1.10.0</version>
    <description>The gnss package</description>
    <maintainer email="tomo@axe.bz">Tomomi HORII</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>roscpp</build_depend>

    <exec_depend>roscpp</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
