<?xml version="1.0"?>
<package format="2">
    <name>ndt_cpu</name>
    <version>1.10.0</version>
    <description>The ndt_cpu package</description>
    <maintainer email="yuki@ertl.jp">Yuki Kitsukawa</maintainer>
    <maintainer email="anh@ertl.jp">Anh Viet Nguyen</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>libpcl-all-dev</build_depend>

    <exec_depend>libpcl-all</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>