<?xml version="1.0"?>
<package format="2">
    <name>ndt_tku</name>
    <version>1.10.0</version>
    <description>The ndt_tku package</description>
    <maintainer email="yuki@ertl.jp">Yuki Kitsukawa</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <build_depend>glut</build_depend>
    <build_depend>libxmu-dev</build_depend>
    <build_depend>libxi-dev</build_depend>

    <exec_depend>glut</exec_depend>
    <exec_depend>libxmu-dev</exec_depend>
    <exec_depend>libxi-dev</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
