<?xml version="1.0"?>
<package format="2">
    <name>pcl_omp_registration</name>
    <version>1.10.0</version>
    <description>The pcl_omp_registration package</description>
    <maintainer email="yuki@ertl.jp">Yuki Kitsukawa</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
