<?xml version="1.0"?>
<package format="2">
    <name>libdpm_ttic</name>
    <version>1.10.0</version>
    <description>The dpm_ttic package</description>
    <maintainer email="syoshida@axe.bz">Syohei YOSHIDA</maintainer>
    <license>Apache 2</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>autoware_build_flags</buildtool_depend>

    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>libopencv-dev</build_depend>

    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>libopencv-dev</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
