<?xml version="1.0"?>
<package format="2">
    <name>op_utility</name>
    <version>1.10.0</version>
    <description>The libopenplanner_utility package</description>
    <maintainer email="yusuke.fujii@tier4.jp">Yusuke FUJII</maintainer>
    <author email="hatem.darweesh@g.sp.m.is.nagoya-u.ac.jp">Hatem Darweesh</author>
    <license>Apache 2</license>

    <buildtool_depend>autoware_build_flags</buildtool_depend>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>vector_map_msgs</build_depend>
    <build_depend>vector_map_server</build_depend>
    <build_depend>tinyxml</build_depend>
    
    <exec_depend>tinyxml</exec_depend>
    <exec_depend>vector_map_msgs</exec_depend>
    <exec_depend>vector_map_server</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
